RWD: enhanced contrast on a few colors to fix accessibility issues

--- a/skin/frontend/rwd/default/scss/_var.scss
+++ b/skin/frontend/rwd/default/scss/_var.scss
@@ -75,8 +75,8 @@ $max-std-formatted-width: 50em;
 // Usually not used directly in Sass partials.
 // Only used to define context-based color vars in this file.
 
-$c-blue: #3399CC;
-$c-green: #11B400;
+$c-blue: #0472ad;
+$c-green: #0f8900;
 $c-pink: #D85378;
 $c-orange: #F3793B;
 $c-red: #CF5050;
